--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Ning Chen 陈宁"
   pronouns         : # example: "she/her"  
   bio              : "The harder you work, the luckier you get"
-  location         : "Gusu District, Suzhou, Jiangsu Province, China"
+  location         : "Suzhou, Jiangsu Province, China"
   employer         : "Soochow University "
   uri              : # URL
   email            : "ningc@suda.edu.cn" 
