--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Homepage"
+title                    : "Ning Chen's Homepage"
 title_separator          : "-"
 name                     : &name "Ning Chen"
 description              : &description "personal description"
